Fixes wrapping issue with display:inline-block

--- a/app/blog/static/fonts/plex-sans/style.css
+++ b/app/blog/static/fonts/plex-sans/style.css
@@ -1,6 +1,3 @@
-/* Do not edit this directly, it was generated by a script. */
-
-
 @font-face {
   font-family: 'Plex Sans';
   font-style: normal;
@@ -10,7 +7,6 @@
        url('{{{config.cdn.origin}}}/fonts/plex-sans/thin.woff2?version=0448f2&extension=.woff2') format('woff2'),
        url('{{{config.cdn.origin}}}/fonts/plex-sans/thin.woff?version=bafe09&extension=.woff') format('woff');
 }
-
 @font-face {
   font-family: 'Plex Sans';
   font-style: italic;
@@ -20,7 +16,6 @@
        url('{{{config.cdn.origin}}}/fonts/plex-sans/thin-italic.woff2?version=8091eb&extension=.woff2') format('woff2'),
        url('{{{config.cdn.origin}}}/fonts/plex-sans/thin-italic.woff?version=3c3082&extension=.woff') format('woff');
 }
-
 @font-face {
   font-family: 'Plex Sans';
   font-style: normal;
@@ -30,7 +25,6 @@
        url('{{{config.cdn.origin}}}/fonts/plex-sans/extra-light.woff2?version=a883af&extension=.woff2') format('woff2'),
        url('{{{config.cdn.origin}}}/fonts/plex-sans/extra-light.woff?version=da3ade&extension=.woff') format('woff');
 }
-
 @font-face {
   font-family: 'Plex Sans';
   font-style: italic;
@@ -40,7 +34,6 @@
        url('{{{config.cdn.origin}}}/fonts/plex-sans/extra-light-italic.woff2?version=cba1a3&extension=.woff2') format('woff2'),
        url('{{{config.cdn.origin}}}/fonts/plex-sans/extra-light-italic.woff?version=7090d2&extension=.woff') format('woff');
 }
-
 @font-face {
   font-family: 'Plex Sans';
   font-style: normal;
@@ -50,7 +43,6 @@
        url('{{{config.cdn.origin}}}/fonts/plex-sans/light.woff2?version=04e33e&extension=.woff2') format('woff2'),
        url('{{{config.cdn.origin}}}/fonts/plex-sans/light.woff?version=5b1e7c&extension=.woff') format('woff');
 }
-
 @font-face {
   font-family: 'Plex Sans';
   font-style: italic;
@@ -60,7 +52,6 @@
        url('{{{config.cdn.origin}}}/fonts/plex-sans/light-italic.woff2?version=cbc8c8&extension=.woff2') format('woff2'),
        url('{{{config.cdn.origin}}}/fonts/plex-sans/light-italic.woff?version=8044ae&extension=.woff') format('woff');
 }
-
 @font-face {
   font-family: 'Plex Sans';
   font-style: normal;
@@ -70,7 +61,6 @@
        url('{{{config.cdn.origin}}}/fonts/plex-sans/regular.woff2?version=d7a0dc&extension=.woff2') format('woff2'),
        url('{{{config.cdn.origin}}}/fonts/plex-sans/regular.woff?version=b1f1c6&extension=.woff') format('woff');
 }
-
 @font-face {
   font-family: 'Plex Sans';
   font-style: italic;
@@ -80,7 +70,6 @@
        url('{{{config.cdn.origin}}}/fonts/plex-sans/italic.woff2?version=d5f24b&extension=.woff2') format('woff2'),
        url('{{{config.cdn.origin}}}/fonts/plex-sans/italic.woff?version=f3d22b&extension=.woff') format('woff');
 }
-
 @font-face {
   font-family: 'Plex Sans';
   font-style: normal;
@@ -90,7 +79,6 @@
        url('{{{config.cdn.origin}}}/fonts/plex-sans/text.woff2?version=8a22b2&extension=.woff2') format('woff2'),
        url('{{{config.cdn.origin}}}/fonts/plex-sans/text.woff?version=965cef&extension=.woff') format('woff');
 }
-
 @font-face {
   font-family: 'Plex Sans';
   font-style: italic;
@@ -100,7 +88,6 @@
        url('{{{config.cdn.origin}}}/fonts/plex-sans/text-italic.woff2?version=2ffd00&extension=.woff2') format('woff2'),
        url('{{{config.cdn.origin}}}/fonts/plex-sans/text-italic.woff?version=cfc50a&extension=.woff') format('woff');
 }
-
 @font-face {
   font-family: 'Plex Sans';
   font-style: normal;
@@ -110,7 +97,6 @@
        url('{{{config.cdn.origin}}}/fonts/plex-sans/medium.woff2?version=d5947a&extension=.woff2') format('woff2'),
        url('{{{config.cdn.origin}}}/fonts/plex-sans/medium.woff?version=934e01&extension=.woff') format('woff');
 }
-
 @font-face {
   font-family: 'Plex Sans';
   font-style: normal;
@@ -120,7 +106,6 @@
        url('{{{config.cdn.origin}}}/fonts/plex-sans/semi-bold.woff2?version=8486ee&extension=.woff2') format('woff2'),
        url('{{{config.cdn.origin}}}/fonts/plex-sans/semi-bold.woff?version=4f35d8&extension=.woff') format('woff');
 }
-
 @font-face {
   font-family: 'Plex Sans';
   font-style: italic;
@@ -130,7 +115,6 @@
        url('{{{config.cdn.origin}}}/fonts/plex-sans/medium-italic.woff2?version=1b42d1&extension=.woff2') format('woff2'),
        url('{{{config.cdn.origin}}}/fonts/plex-sans/medium-italic.woff?version=f507b6&extension=.woff') format('woff');
 }
-
 @font-face {
   font-family: 'Plex Sans';
   font-style: italic;
@@ -140,7 +124,6 @@
        url('{{{config.cdn.origin}}}/fonts/plex-sans/semi-bold-italic.woff2?version=10986a&extension=.woff2') format('woff2'),
        url('{{{config.cdn.origin}}}/fonts/plex-sans/semi-bold-italic.woff?version=40a921&extension=.woff') format('woff');
 }
-
 @font-face {
   font-family: 'Plex Sans';
   font-style: normal;
@@ -150,7 +133,6 @@
        url('{{{config.cdn.origin}}}/fonts/plex-sans/bold.woff2?version=1759ad&extension=.woff2') format('woff2'),
        url('{{{config.cdn.origin}}}/fonts/plex-sans/bold.woff?version=21cb2e&extension=.woff') format('woff');
 }
-
 @font-face {
   font-family: 'Plex Sans';
   font-style: italic;
@@ -160,15 +142,8 @@
        url('{{{config.cdn.origin}}}/fonts/plex-sans/bold-italic.woff2?version=aee620&extension=.woff2') format('woff2'),
        url('{{{config.cdn.origin}}}/fonts/plex-sans/bold-italic.woff?version=a183af&extension=.woff') format('woff');
 }
-
 .pull-double {margin-left:-0.419em}
 .push-double{margin-right:0.419em}
 .pull-single{margin-left:-0.242em}
 .push-single{margin-right:0.242em}
-.pull-double,.pull-single,.push-double,.push-single{display:inline-block}
-.pull-T,.pull-V,.pull-W,.pull-Y{margin-left:-.07em}
-.push-T,.push-V,.push-W,.push-Y{margin-right:.07em}
-.pull-C,.pull-O,.pull-c,.pull-o{margin-left:-.04em}
-.push-C,.push-O,.push-c,.push-o{margin-right:.04em}
-.pull-A{margin-left:-.03em}
-.push-A{margin-right:.03em}
+.push-double,.push-single{display:inline-block}
